<resources>
    <string name="app_name">SimpleCalc</string>
    <string name="angka_1">Angka 1</string>
    <string name="angka_2">angka_2</string>
    <string name="plus">+</string>
    <string name="divide">-</string>
    <string name="kali">*</string>
    <string name="bagi">/</string>
    <string name="hasil">Hasil:</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>