<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/angka_1"
        app:layout_constraintEnd_toEndOf="@+id/edtAngka1"
        app:layout_constraintStart_toStartOf="@+id/edtAngka1"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtAngka1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/angka_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/edtAngka2"
        app:layout_constraintTop_toBottomOf="@+id/edtAngka1" />

    <EditText
        android:id="@+id/edtAngka2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/btnTambah"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnTambah"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/plus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtAngka2" />

    <Button
        android:id="@+id/btnKurang"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_toEndOf="@id/btnTambah"
        android:text="@string/divide"
        app:layout_constraintEnd_toStartOf="@id/btnKali"
        app:layout_constraintStart_toEndOf="@id/btnTambah"
        app:layout_constraintTop_toBottomOf="@id/edtAngka2" />

    <Button
        android:id="@+id/btnKali"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_toEndOf="@id/btnKurang"
        android:text="@string/kali"
        app:layout_constraintEnd_toStartOf="@id/btnBagi"
        app:layout_constraintStart_toEndOf="@id/btnKurang"
        app:layout_constraintTop_toBottomOf="@id/edtAngka2" />

    <Button
            android:id="@+id/btnBagi"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@id/btnKali"
            android:text="@string/bagi"
            app:layout_constraintStart_toEndOf="@id/btnKali"
            app:layout_constraintTop_toBottomOf="@id/edtAngka2"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hasil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTambah" />

    <TextView
        android:id="@+id/tvHasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
</androidx.constraintlayout.widget.ConstraintLayout>